src/objects/External_Contacts__c.object
<CustomObject>
    <fields>
        <fullName>Contact_Name_Formula__c</fullName>
        <formula>Related_Contact__r.FirstName &amp;&apos; &apos;&amp; Related_Contact__r.LastName</formula>
        <label>Contact Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Type__c</fullName>
        <inlineHelpText>Contact Type=Public Contact then the contact name gets updated on the service record.</inlineHelpText>
        <label>Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Public Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Primary Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Contact</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>External_Service__c</fullName>
        <label>External Service</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Services__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Service</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Services__c</referenceTo>
        <relationshipLabel>External Contacts</relationshipLabel>
        <relationshipName>External_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Other, Professional / Stakeholder</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>External Contacts</relationshipLabel>
        <relationshipName>External_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>External Contacts</label>
    <nameField>
        <displayFormat>EC{00000}</displayFormat>
        <label>External Contact ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>